--- a/index.jade
+++ b/index.jade
@@ -3,4 +3,8 @@ html
   head
     script(type='text/javascript', src='./js/libs/requirejs/require.js', data-main='js/app.js', async)
   body
-    section#main-content
+    section#task-form
+      textarea(rows='1', cols='40')
+      div.add-button add
+
+    ul#tasks
